[package]
name = "hamming"
version = "0.1.2"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

license = "MIT/Apache-2.0"
keywords = ["popcount", "hamming", "bithack"]
homepage = "https://github.com/huonw/hamming"
repository = "https://github.com/huonw/hamming"
documentation = "https://docs.rs/hamming/"

description = """
Count ones, fast (aka popcount, hamming weight). This provides a
performant popcount and bitwise hamming distance for a slice of bytes.
"""


[features]
unstable = []

[dev-dependencies]
quickcheck = "1.0"
criterion = "0.2"

[[bench]]
name = "benches"
harness = false
